--- a/PISTONS/angular.json
+++ b/PISTONS/angular.json
@@ -17,6 +17,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/PISTONS/browser",
+
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
